add company create view. add check when to refresh the company list in router change.
Signed-off-by: robertzml <robertzml@126.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>nereus</title>
+    <title>热水器厂商管理系统</title>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
