--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>热水器厂商管理系统</title>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
     <div id="app"></div>
