--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>热水器厂商管理系统</title>
+    <title>省当家平台管理系统</title>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
